[project]
name = "dtscan"
version = "0.1.0"
description = "DTSCAN: Delaunay Triangulation-Based Spatial Clustering Algorithm"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]
